2008-11-06  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* sys/dvb/gstdvbsrc.c:
	Set filters in PAUSED or PLAYING.

2008-11-06  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* gst/mpegdemux/gstmpegtsdemux.c:
	Make private section pads have a caps set so they are not tried
	to be linked in parse_launch for example.

2008-11-06  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	patch by: Josep Torra

	* gst/mpegdemux/gstmpegtsdemux.c:
	No need to reclaculate flush in this case.
	Fixes some bad decode errors introduced.

2008-11-06  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* gst/mpegdemux/gstmpegtsdemux.c:
	* gst/mpegdemux/gstmpegtsdemux.h:
	Fix typo.

2008-11-06  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/librfb/gstrfbsrc.c:
	Fix RGB mask in caps

2008-11-05  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/librfb/gstrfbsrc.c:
	* gst/librfb/rfbdecoder.c:
	* gst/librfb/rfbdecoder.h:
	Add Hextile encoding

2008-11-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	patch by: Josep Torra

	* gst/mpegdemux/gstmpegtsdemux.c:
	Heuristic approach when resyncing.

2008-11-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	patch by: Sebastian Pölsterl

	* gst/mpegdemux/gstmpegdesc.c:
	Length should be a guint8 not a gint.
	* gst/mpegdemux/mpegtspacketizer.c:
	Convert text to utf8 for each descriptor separately and not
	concatenate them first and convert after.
	
2008-11-04  Stefan Kost  <ensonic@users.sf.net>

	* gst/modplug/gstmodplug.cc:
	  Send tag event. Fixes #559286.

2008-11-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	patch by: Sebastian Pölsterl

	* gst/mpegdemux/mpegtsparse.c:
	Fix another memleak.

2008-11-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	patch by: Sebastian Pölsterl

	* gst/mpegdemux/mpegtspacketizer.c:
	* sys/dvb/gstdvbsrc.c:
	Fix memleaks.

2008-11-04  Stefan Kost  <ensonic@users.sf.net>

	* ext/alsaspdif/Makefile.am:
	* ext/amrwb/Makefile.am: